fix error indicator wrap textr

--- a/src/app/pages/sign-in/sign-in.component.sass
+++ b/src/app/pages/sign-in/sign-in.component.sass
@@ -8,7 +8,7 @@ $warn: map-get($theme, warn)
 
 mat-card
   background-color: mat-color($primary)
-  margin-top: 20vh
+  margin-top: 15vh
   width: 30%
 
 mat-card.mobile
@@ -25,8 +25,9 @@ button
   width: 80%
 
 mat-progress-spinner
-  margin: 20px 0 20px
+  margin: 20px 0 0
 
 button#error
+  white-space: pre-wrap
   border: none
   background-color: rgba(mat-color($warn), 0.2)
